--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Create light version of Slack",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm run start --prefix frontend"
   },
   "repository": {
     "type": "git",
