--- a/package.json
+++ b/package.json
@@ -16,5 +16,7 @@
   "bugs": {
     "url": "https://github.com/Sverxsro4nik/frontend-project-lvl4/issues"
   },
-  "homepage": "https://github.com/Sverxsro4nik/frontend-project-lvl4#readme"
+  "homepage": "https://github.com/Sverxsro4nik/frontend-project-lvl4#readme",
+  "dependencies": {
+  }
 }
