update send button in messages block

--- a/package.json
+++ b/package.json
@@ -16,7 +16,5 @@
   "bugs": {
     "url": "https://github.com/Sverxsro4nik/frontend-project-lvl4/issues"
   },
-  "homepage": "https://github.com/Sverxsro4nik/frontend-project-lvl4#readme",
-  "dependencies": {
-  }
+  "homepage": "https://github.com/Sverxsro4nik/frontend-project-lvl4#readme"
 }
