Add command for heroku

--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -1,8 +1,15 @@
 install:
-	npm install
+	npm ci
 
 start-frontend:
 	npm run start
 
 start-backend:
 	npm run server
+
+start:
+	npm start
+
+build: 
+	npm build
+	
