--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Create light version of Slack",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm i --prefix frontend  && npm run start --prefix frontend"
+    "build": "npm run build --prefix frontend",
+    "start": "start-server -s./frontend/build",
+    "postinstall": "cd frontend && npm ci"
   },
   "repository": {
     "type": "git",
