--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
     "i18next": "^21.8.16",
+    "leo-profanity": "^1.5.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-icons": "^1.8.4",
