--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.1",
     "formik": "^2.2.9",
     "i18next": "^21.8.16",
     "leo-profanity": "^1.5.1",
