--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,5 +54,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5001/"
+  "proxy": "http://localhost:5001/",
+  "devDependencies": {
+    "@playwright/test": "^1.25.0"
+  }
 }
