--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,8 @@
     "react-toastify": "^9.0.8",
     "socket.io-client": "^4.5.1",
     "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "@playwright/test": "^1.25.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -54,8 +55,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5001/",
-  "devDependencies": {
-    "@playwright/test": "^1.25.0"
-  }
+  "proxy": "http://localhost:5001/"
 }
