--- a/frontend/.eslintrc.yml
+++ b/frontend/.eslintrc.yml
@@ -3,6 +3,7 @@ env:
   es2021: true
 extends:
   - eslint:recommended
+  - plugin:react/recommended
   - airbnb-base
 parserOptions:
   ecmaFeatures:
