--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,10 +55,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5001/",
-  "devDependencies": {
-    "eslint": "^8.22.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-react": "^7.30.1"
-  }
+  "proxy": "http://localhost:5001/"
 }
